# proofile-2.0

./: .gitignore  ANTI_GAMING_IMPLEMENTATION.md  Makefile  PHASE1_ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  PHASE1_INDEX.md  PHASE1_QUICK_REFERENCE.md  PHASE1_README.md  PHASE1_TESTING_CHECKLIST.md  commit-changes.sh  create_test_jobs.py  docker-compose.yml  package-lock.json  reg_test.json  snyk_code_scan  test_pwd.py  test_sprint2.py
ai-pipeline/: Dockerfile  __init__.py  health.py  list_models.py  pyproject.toml  test_push.py
ai-pipeline/deduplication/: fuzzy_dedup.py  fuzzy_matcher.py
ai-pipeline/models/classification/: scam_classifier.py
ai-pipeline/models/llm/: __init__.py  gemini_client.py  groq_client.py  opportunity_parser.py  prompt_templates.py
ai-pipeline/processors/: __init__.py
ai-pipeline/queue_consumers/: dlq_consumer.py  raw_data_consumer.py
ai-pipeline/tests/: test_salary_parsing.py
ai-pipeline/utils/: ai_enhancements.py
backend/: Dockerfile  README.md  check_columns.py  create_test_jobs.py  inspect_db.py  pyproject.toml  pytest.ini  test_passwords.py  test_weasyprint.py
backend/alembic/versions/: 051a0da03408_create_peer_verification_requests_table.py  1456ffde2e15_add_job_verification_requirements_fields.py  1a5e4dae1c7a_add_dashboard_preferences_to_users.py  20251113_create_resumes_and_templates.py  33b9b376d90a_create_initial_user_table.py  42481afe038e_add_trust_events_documents_skill_.py  50303bdaea3f_add_posts_comments_reactions_tables.py  5fb35329d2ab_add_verification_tokens.py  6de5d41c5280_add_user_persona_field.py  6e8fdef75e26_add_onboarding_fields.py  78b3cc1671a9_add_trust_score_and_verification_level.py  82e9cbddf40e_create_rating_requests_table.py  8b9064b250a1_add_experience_and_portfolio_tables.py  933b2a9dede6_add_slug_to_opportunities.py  9a7c9c9ec346_create_project_collaborators_table.py  a350ac68b170_add_feed_and_portal_tables.py  a73a461453b4_consolidated_portal_features.py  add_username_profile.py  b504c868d5df_add_template_id_to_resumes.py  c5d8e9a1b2f3_rename_jobs_to_opportunities.py  cdaa5978d98b_add_reputation_stats_and_rating_.py  d045b3384f88_add_resume_upload_fields.py  d2a46ffae604_add_rating_requests_table.py  d31841270db1_add_user_reputation_stats_table.py  d7e8f9a2b3c4_add_opportunity_preference.py  e1a2b3c4d5e6_add_personalization_dimension_columns.py  ee30f24203a7_merge_migration_heads.py  f1a2b3c4d5e7_add_opportunity_type_columns.py  merge_heads_sprint1_2.py  (+19 more)
backend/app/: celery_app.py  main.py  tasks.py
backend/scripts/: create_portal_table.py  create_portal_table_sql.py  entrypoint.sh  run_scrapers.py  seed_dev_user.py  seed_feed_pipeline_test.py  seed_portal_jobs.py  test_scrapers.py  verify_architecture.py
scraping-engine/: .dockerignore  Dockerfile  __init__.py  health.py  items.json  items.py  pyproject.toml  scheduler.py  scrapy.cfg  settings.py  test_capitec_scrape.sh  test_structured_extraction.py
scraping-engine/extensions/: __init__.py  prometheus_metrics.py
scraping-engine/middlewares/: __init__.py  deduplication_middleware.py  proxy_middleware.py  rate_limiter.py  user_agent_middleware.py
scraping-engine/parsers/: date_parser.py  location_parser.py  salary_parser.py
scraping-engine/pipelines/: __init__.py  link_validation_pipeline.py  metrics_pipeline.py  queue_pipeline.py
scraping-engine/scripts/: parallel_runner.py
scraping-engine/spiders/: __init__.py  base_spider.py  playwright_mixin.py
scraping-engine/tests/: TEST_STRUCTURED_EXTRACTION.md  test_careers24_spider.py  test_pipelines.py  test_pnet_spider.py  test_recentjobs_enhanced.py  test_salary_parsing.py  test_studentroom_spider.py
scraping-engine/utils/: __init__.py  async_link_validator.py  link_validator.py  performance.py  redis_state.py
(+655 files in other folders)
