[tool.poetry]
name = "sa-search-engine-scraper"
version = "0.1.0"
description = "Universal data acquisition engine for SA Search Engine - 7-layer meta-crawler"
authors = ["Opportunity Radar Team"]
readme = "README.md"
packages = [{include = "spiders"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
playwright = "^1.41.0"
scrapy-playwright = "^0.0.34"  # Phase 2: Playwright integration
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
pika = "^1.3.2"  # RabbitMQ client
redis = "^5.0.1"
python-dotenv = "^1.0.0"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.3"
pytesseract = "^0.3.10"  # OCR
pillow = "^10.1.0"
fake-useragent = "^1.4.0"
requests = "^2.31.0"
boto3 = "^1.34.24"  # AWS S3 for raw data storage
Brotli = "^1.1.0"  # Brotli decompression for web responses
aiohttp = "^3.9.1"  # Phase 1: Async link validation
prometheus-client = "^0.19.0"  # Phase 1: Monitoring metrics

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []
